--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,22 @@ body {
 }
 
 .delete-btn, .edit-btn {
-  visibility: hidden;
+  background-color: transparent;
+  border-color: transparent;
+  color: transparent;
+  transition: 0.3s;
 }
 
 .ticket:hover .delete-btn {
-  visibility: visible;
+  background-color: #dc3545;
+  border-color: #dc3545;
+  color: white;
 } 
 
 .ticket:hover .edit-btn {
-  visibility: visible;
+  background-color: #007bff;
+  border-color: #007bff;
+  color: white;
 }
 
 .copy-btn {
